# MATH6015-Project

./: .gitignore  Answer-task.md  Project_Report.md  README.md  pyproject.toml  run_all.py
examples/: smoke_check.py
exp1/: README.md  run.py
exp2/: README.md  run.py
exp3/: README.md  run.py
src/newton_methods/: __init__.py  algorithms.py  core.py  experiment_utils.py  line_search.py  problems.py
