[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "math6015-newton-methods"
version = "0.1.0"
description = "Newton-type optimization methods for the MATH6015 project."
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["src"]
